--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -10,14 +10,16 @@
         </label>
     </div>
     <div class="form-group">
-            <label>Description
-                <input type="text" name="description" class="form-control">
-            </label>
+        <label>Description
+            <input th:field="${event.eventDetails.description}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.eventDetails.description}"></p>
     </div>
     <div class="form-group">
         <label>Contact Email
-            <input type="text" name="contactEmail" class="form-control">
+            <input th:field="${event.eventDetails.contactEmail}" class="form-control">
         </label>
+        <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
     </div>
     <div class="form-group">
         <label>Type
