--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -12,11 +12,15 @@
             <th>Description</th>
         </tr>
     </thead>
-<tr th:each="event : ${events}">
+    <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
-        <td th:text="${event.description}"></td>
-</tr>
+        <td th:text="${event.eventDetails.description}"></td>
+        <td th:text="${event.eventDetails.contactEmail}"></td>
+        <td th:text="${event.eventCategory.name}"></td>
+        //<td th:text="${event.eventCategory.name}"></td> Tags
+
+    </tr>
 </table>
 
 </body>
