--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
@@ -14,7 +13,6 @@
             <label>Description
                 <input type="text" name="description" class="form-control">
             </label>
-=======
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
@@ -42,14 +40,14 @@
     </div>
     <div class="form-group">
         <label>Type
-        <select th:field="${event.category}">
-            <option th:each="category : ${categories}"
-                    th:value="${category}"
-                    th:text="${category.name}"
+        <select th:field="${event.eventCategory}">
+            <option th:each="eventCategory : ${categories}"
+                    th:value="${eventCategory.id}"
+                    th:text="${eventCategory.name}"
             ></option>
         </select>
+            <p class="error" th:errors="$event.eventCategory}"></p>
         </label>
->>>>>>> 0272eb9801ecf8dcc7310b45907cf1f9e54a99df
     </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
